# primevideo-discord-presence

./: .gitignore  LICENSE  README.md  icon.rc
.github/workflows/: auto-version-bump.yml  release.yml  version-sync.yml
extension/: background.js  log.css  log.html  log.js  logCommon.js  manifest.json  popup.html  popup.js
installer/: build_crx.ps1  com.pvdp.discord.presence.json  pvdp_installer.rs  pvdp_uninstaller.rs  windows.ps1  windows_uninstall.ps1
native/: Cargo.toml  build.rs
native/extension/: content.js  log.html  manifest.json  popup.css  popup.html  popup.js
native/src/: main.rs
