[package]
name    = "pvdp"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow              = "1"
chrono              = "0.4"
discord-sdk         = "0.3.7"
html-escape         = "0.2"
once_cell           = "1.21"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
single-instance     = "0.3"
tokio               = { version = "1", features = ["full"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender    = "0.2"
tray-item           = "0.10"
warp                = "0.3"
webbrowser          = "0.8"
windows-sys         = { version = "0.52", features = ["Win32_System_Console"] }
futures-util        = "0.3"
tokio-tungstenite   = "0.26"

[build-dependencies]
embed-resource = "2.5"